# todolist-in-cpp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: fileManager.cpp.080CD907A7987161.idx  main.cpp.CEFC86EA657E9CCC.idx  menu.cpp.05982B210D8D7E08.idx  menu.h.1776FB2E16520E81.idx  task.cpp.8AEF9E754205A764.idx  task.h.3A64F6D43ACCD39E.idx  taskManager.cpp.E8DA77800AE440E3.idx  taskManager.h.2E2B5F5F0F82D0B6.idx  todoManager.cpp.15A05ADCA2A0852E.idx  todoManager.h.E99FEF5902BA9F76.idx  util.cpp.9AC156E3345EDCB1.idx  util.h.15C12FD0CBAA14DF.idx
inc/: menu.h  task.h  todoManager.h  util.h
src/: main.cpp  menu.cpp  task.cpp  todoManager.cpp  util.cpp
